--- a/public/about.html
+++ b/public/about.html
@@ -9,7 +9,7 @@
       <h1>TestGuru</h1>
     </div>
     <p>That's a training project on
-      <a href="https://thinknetica.com/">www.thinknetica.com</a>
+      <a href="https://thinknetica.com/" target = "_blank" rel="noopener noreferrer">www.thinknetica.com</a>
       Ruby on Rails course</p>
   </div>
 </body>
