--- a/public/about/author.html
+++ b/public/about/author.html
@@ -9,7 +9,7 @@
       <h1>Kirill Kozyrev</h1>
     </div>
     <p>Junior ruby developer </p>
-    <a href="https://github.com/fkyeaseaking">See me on GitHub</a>
+    <a href="https://github.com/fkyeaseaking" target = "_blank" rel="noopener noreferrer">See me on GitHub</a>
   </div>
 </body>
 </html>
